2012-06-03  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/spad.lisp (SPAD): Adjust.
	* interp/spad-parser.boot: Add a reader parameter to all parsing
	functions.  Adjust callers.
	* interp/newaux.lisp: Adjust form of specialized parsers.
	* interp/lexing.boot: Add a reader parameter to all lexing
	functions.  Adjust Callers.
	* interp/io.boot (%Reader): Add source line field.
	* interp/debug.lisp: Adjust IO and lexer calls.
	* interp/util.lisp (string2SpadTree): Remove as unused.

2012-06-03  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/preparse.lisp ($LineList): Remove.
	(INITIALIZE-PREPARSE): Do not set it.
	(preparse1): Do not reference it.  Do not test for ioTerminal? and
	the input is always a disk file.
	* interp/spad-parser.boot (findCommentBlock): Do not reference
	$EchoLineStack.
	(preparseReadLine1): Do not reference $LineList.

2012-06-03  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/io.boot (%Reader): New data structure.
	* interp/preparse.lisp (INITIALIZE-PREPARSE): Parameter is now a
	reader.
	(preparse1): Likewise.  Tidy.
	* interp/spad-parser.boot (preparseReadLine): Likewise.
	(preparseReadLine1): Likewise.
	(preparse): Likewise.
	(parseSpadFile): Likewise.
	* interp/spad.lisp (SPAD): Make it a unary function.  Simplify.
	(INITIALIZE): Remove.

2012-06-03  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/lexing.boot (%Line): Now a record structure.
	* boot/parser.boot (bpTypeName): Split out of bpTypeAliasDefinition.
	(bpStruct): Use it.  Support parameterized structures.
	* boot/ast.boot (ctorName): New.
	(bfEnum): Use it for parameterized enums.
	(bfRecord): Use it for parameterized records.

2012-06-03  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* boot/parser.boot (bpSignatureTail): Split out of bpSignature.
	(bpTyped): Use it.
	(bpThrow): Lilkewise.
	(bpRegularBVItemTail): Likewise.
	(bpAssignLHS): Likewise.
	(bpStoreName): Do not reference $typings.
	* boot/ast.boot (%Ast): Remove %Pretend variant.